chore: update About component with new bio and change layout title

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,15 +1,33 @@
 ---
-import User from '../assets/Image.png'
+import User from "../assets/Image.png";
 ---
 
 <section class="about" id="about">
-    <figure class="about-picture">
-        <img src={User.src} alt="Juan Garcia picture">
-    </figure>
-    <article class="about-bio">
-        <h2 class="heading-2">Hello, I'm Juan, a passionate web developer with over 10 years of experience in the industry.</h2>
-        <p class="text-normal">Throughout my career, I have faced and overcome various challenges that have strengthened my ability to find innovative solutions in the development world.</p>
-        <p class="text-normal">From my early days as an apprentice to leading development teams in large-scale projects, each experience has been a fundamental pillar in my professional growth. I take pride in contributing to the success of numerous projects, from e-commerce platforms to award-winning mobile applications.</p>
-        <p class="text-normal">My focus has always been on transforming ideas into digital realities, using cutting-edge technologies and agile methodologies. This passion for creation and problem-solving has led me to constantly explore new trends and stay updated in a technology landscape that is always evolving</p>
-    </article>
+  <figure class="about-picture">
+    <img src={User.src} alt="Pravin Jadhav's picture" />
+  </figure>
+  <article class="about-bio">
+    <h2 class="heading-2">
+      Hello, I'm Pravin, a passionate web developer with a keen eye for detail.
+    </h2>
+    <p class="text-normal">
+      Despite facing severe attention deficit challenges, I have relentlessly
+      pursued excellence in web development, overcoming obstacles with
+      determination and innovation.
+    </p>
+    <p class="text-normal">
+      From my early days as an apprentice, every challenge has strengthened my
+      problem-solving skills and deepened my expertise. I take immense pride in
+      contributing to the success of various projects, from e-commerce platforms
+      to mobile applications.
+    </p>
+    <p class="text-normal">
+      I am passionate about transforming ideas into digital realities,
+      leveraging cutting-edge technologies and agile methodologies. My
+      unwavering dedication to my craft drives me to continuously explore new
+      trends and stay ahead in the ever-evolving tech landscape. For me, work is
+      more than just a profession—it is a pursuit I deeply respect and strive to
+      master every day.
+    </p>
+  </article>
 </section>
