--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,25 +1,30 @@
 ---
-import Logo from '../assets/icon.svg'
+import Logo from "../assets/icon.svg";
 ---
 
 <header>
-    <nav class="navbar">
-        <div class="navbar-brand">
-            <a href="index.html" role="link" class="navbar-logo">
-                <img src={Logo.src} alt="Brand">
-            </a>
-        </div>
-        <a href="#contact" class="text-normal">Contact</a>
-    </nav>
-    <div class="hero">
-        <h1 class="heading-1">
-            Hello, everyone! You know Juan, <span class="green">right?</span> Allow me to tell you about Juan, a passionate <span class="violet">web developer.</span> Juan transforms lines of code into true digital <span class="pink">masterpieces.</span>
-            <a href="#about" role="button" class="button">
-                <span class="button-text">Learn more</span>
-                <span class="button-box-icon">
-                    <i class="ri-arrow-down-line"></i>
-                </span>
-            </a>
-        </h1>
+  <nav class="navbar">
+    <div class="navbar-brand">
+      <a href="index.html" role="link" class="navbar-logo">
+        <img src={Logo.src} alt="Brand" />
+      </a>
     </div>
+    <a href="#contact" class="text-normal">Contact</a>
+  </nav>
+  <div class="hero">
+    <h1 class="heading-1">
+      Hello, everyone! You know Pravin, <span class="green">right?</span> Allow me
+      to tell you about Juan, a passionate <span class="violet"
+        >web developer.</span
+      > Juan transforms lines of code into true digital <span class="pink"
+        >masterpieces.</span
+      >
+      <a href="#about" role="button" class="button">
+        <span class="button-text">Learn more</span>
+        <span class="button-box-icon">
+          <i class="ri-arrow-down-line"></i>
+        </span>
+      </a>
+    </h1>
+  </div>
 </header>
