chore: replace unused screen asset with new work image in Projects component

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import Screen from "../assets/screen.png";
+import Work1 from "../assets/work-1.png";
 import Work2 from "../assets/work-2.png";
 import Work3 from "../assets/work-3.png";
 import Work4 from "../assets/work-4.png";
@@ -15,7 +15,7 @@ import Work4 from "../assets/work-4.png";
   <ul class="projects">
     <li class="card">
       <figure class="card-picture">
-        <img src={Screen} alt="Anything project" />
+        <img src={Work1.src} alt="Anything project" />
       </figure>
       <h3 class="heading-3"><a href="#">Newspaper app</a></h3>
       <ul class="card-skills">
