chore: replace user image asset and update references in About and Hero components

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import Logo from "../assets/icon.svg";
       Hello, everyone! You know Pravin, <span class="green">right?</span> Allow me
       to tell you about Juan, a passionate <span class="violet"
         >web developer.</span
-      > Juan transforms lines of code into true digital <span class="pink"
+      > Pravin transforms lines of code into true digital <span class="pink"
         >masterpieces.</span
       >
       <a href="#about" role="button" class="button">
