chore: adjust image styling in About component for better display

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,11 @@ import User from "../assets/pravin.jpg";
 
 <section class="about" id="about">
   <figure class="about-picture">
-    <img src={User.src} alt="Pravin Jadhav's picture" />
+    <img
+      src={User.src}
+      alt="Pravin Jadhav's picture"
+      style="width: 150px; height: auto;"
+    />
   </figure>
   <article class="about-bio">
     <h2 class="heading-2">
