chore: update Hero component to mention Pravin instead of Juan

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@ import Logo from "../assets/icon.svg";
   <div class="hero">
     <h1 class="heading-1">
       Hello, everyone! You know Pravin, <span class="green">right?</span> Allow me
-      to tell you about Juan, a passionate <span class="violet"
+      to tell you about Pravin, a passionate <span class="violet"
         >web developer.</span
       > Pravin transforms lines of code into true digital <span class="pink"
         >masterpieces.</span
