--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,7 +2,7 @@
 import Work1 from "../assets/work-1.png";
 import Work2 from "../assets/work-2.png";
 import Work3 from "../assets/work-3.png";
-import Work4 from "../assets/work-4.png";
+import Work4 from "../assets/work-4.jpeg";
 ---
 
 <section>
